2010-10-18  Leif Madsen <lmadsen@digium.com>

	* Asterisk 1.8.0-rc5 Released.

2010-10-18 22:02 +0000 [r292230]  Leif Madsen <lmadsen@digium.com>

	* sounds/Makefile, /: Merged revisions 292229 via svnmerge from
	  https://origsvn.digium.com/svn/asterisk/branches/1.6.2 ........
	  r292229 | lmadsen | 2010-10-18 17:01:16 -0500 (Mon, 18 Oct 2010)
	  | 3 lines Fix typo in the sounds/Makefile. (Issue #17426)
	  ........

2010-10-18 21:55 +0000 [r292227]  Jeff Peeler <jpeeler@digium.com>

	* apps/app_voicemail.c, /: Merged revisions 292226 via svnmerge
	  from https://origsvn.digium.com/svn/asterisk/branches/1.6.2
	  ................ r292226 | jpeeler | 2010-10-18 16:54:38 -0500
	  (Mon, 18 Oct 2010) | 18 lines Merged revisions 292223 via
	  svnmerge from
	  https://origsvn.digium.com/svn/asterisk/branches/1.4 ........
	  r292223 | jpeeler | 2010-10-18 16:50:30 -0500 (Mon, 18 Oct 2010)
	  | 11 lines Fix improper operator key acceptance and clean up temp
	  recording files. This is a fix for when pressing the operator key
	  after recording an unavailable, busy, name, or temporary message
	  in mailbox options. The operator key should not be accepted here,
	  but should be allowed during the message recording. If the
	  operator key is pressed during ensure the file is saved or
	  deleted as apporopriate. Also, ensure removal of temporary
	  recorded files after an early hang up or when message acceptance
	  confirmation times out. ABE-2518 ........ ................

2010-10-18 21:51 +0000 [r292225]  Leif Madsen <lmadsen@digium.com>

	* sounds/sounds.xml, sounds/Makefile, /: Merged revisions 292224
	  via svnmerge from
	  https://origsvn.digium.com/svn/asterisk/branches/1.6.2
	  ................ r292224 | lmadsen | 2010-10-18 16:50:47 -0500
	  (Mon, 18 Oct 2010) | 17 lines Merged revisions 292222 via
	  svnmerge from
	  https://origsvn.digium.com/svn/asterisk/branches/1.4 ........
	  r292222 | lmadsen | 2010-10-18 16:47:25 -0500 (Mon, 18 Oct 2010)