@@ -1,1 +1,1 @@
-1.8.0-rc5
+1.8.0
