@@ -1,122 +1,0 @@
-                                Release Summary
-
-                               asterisk-1.8.0-rc5
-
-                                Date: 2010-10-18
-
-                           <asteriskteam@digium.com>
-
-     ----------------------------------------------------------------------
-
-                               Table of Contents
-
-    1. Summary
-    2. Contributors
-    3. Closed Issues
-    4. Other Changes
-    5. Diffstat
-
-     ----------------------------------------------------------------------
-
-                                    Summary
-
-                                 [Back to Top]
-
-   This release includes only bug fixes. The changes included were made only
-   to address problems that have been identified in this release series.
-   Users should be able to safely upgrade to this version if this release
-   series is already in use. Users considering upgrading from a previous
-   release series are strongly encouraged to review the UPGRADE.txt document
-   as well as the CHANGES document for information about upgrading to this
-   release series.
-
-   The data in this summary reflects changes that have been made since the
-   previous release, asterisk-1.8.0-rc4.
-
-     ----------------------------------------------------------------------
-
-                                  Contributors
-
-                                 [Back to Top]
-
-   This table lists the people who have submitted code, those that have
-   tested patches, as well as those that reported issues on the issue tracker
-   that were resolved in this release. For coders, the number is how many of
-   their patches (of any size) were committed into this release. For testers,
-   the number is the number of times their name was listed as assisting with
-   testing a patch. Finally, for reporters, the number is the number of
-   issues that they reported that were closed by commits that went into this
-   release.
-
-     Coders                   Testers                  Reporters              
-   2 lmadsen                1 camsown                1 camsown                
-   1 camsown                1 jtodd                  
-   1 dvossel                1 lmadsen                
-   1 jpeeler                1 qwell                  
-   1 mnicholson             
-   1 russell                
-
-     ----------------------------------------------------------------------
-
-                                 Closed Issues
-
-                                 [Back to Top]
-
-   This is a list of all issues from the issue tracker that were closed by
-   changes that went into this release.
-
-  Category: Sounds
-
-   #17426: [patch] Australian Accent core sounds submission
-   Revision: 292225
-   Reporter: camsown
-   Testers: camsown, lmadsen, jtodd, qwell
-   Coders: camsown, lmadsen
-
-     ----------------------------------------------------------------------
-
-                      Commits Not Associated with an Issue
-
-                                 [Back to Top]
-
-   This is a list of all changes that went into this release that did not
-   directly close an issue from the issue tracker. The commits may have been
-   marked as being related to an issue. If that is the case, the issue
-   numbers are listed here, as well.
-
-   +------------------------------------------------------------------------+
-   | Revision | Author     | Summary                           | Issues     |
-   |          |            |                                   | Referenced |
-   |----------+------------+-----------------------------------+------------|
-   | 292122   | mnicholson | Fix the cmgr parser.              |            |
-   |----------+------------+-----------------------------------+------------|
-   | 292155   | dvossel    | Fixes build error for systems not |            |
-   |          |            | supporting IPV6_TCLASS.           |            |
-   |----------+------------+-----------------------------------+------------|
-   | 292188   | russell    | Resolve some compiler errors in   |            |
-   |          |            | ast_sockaddr_is_any().            |            |
-   |----------+------------+-----------------------------------+------------|
-   |          |            | Fix improper operator key         |            |
-   | 292227   | jpeeler    | acceptance and clean up temp      |            |
-   |          |            | recording files.                  |            |
-   |----------+------------+-----------------------------------+------------|
-   | 292230   | lmadsen    | Fix typo in the sounds/Makefile.  |            |
-   +------------------------------------------------------------------------+
-
-     ----------------------------------------------------------------------
-
-                                Diffstat Results
-
-                                 [Back to Top]
-
-   This is a summary of the changes to the source code that went into this
-   release that was generated using the diffstat utility.
-
- addons/chan_mobile.c |    2 +-
- apps/app_voicemail.c |   14 ++++++++++++--
- main/netsock2.c      |   19 +++++++++++++------
- sounds/Makefile      |   11 +++++++----
- sounds/sounds.xml    |   18 ++++++++++++++++++
- 5 files changed, 51 insertions(+), 13 deletions(-)
-
-     ----------------------------------------------------------------------
