@@ -1,3 +1,7 @@
+2010-10-21  Leif Madsen <lmadsen@digium.com>
+
+	* Asterisk 1.8.0 Released.
+
 2010-10-18  Leif Madsen <lmadsen@digium.com>
 
 	* Asterisk 1.8.0-rc5 Released.
